<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cam.heloworld.rescuex.FakeCalling">

    <EditText
        android:id="@+id/fakename"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:hint="@string/fake_name"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteY="108dp"
        tools:layout_editor_absoluteX="4dp"
        android:layout_above="@+id/fakenumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </EditText>

    <EditText
        android:id="@+id/fakenumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fake_number"
        android:paddingLeft="10dp"
        android:inputType="phone"
        tools:layout_editor_absoluteY="151dp"
        tools:layout_editor_absoluteX="5dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio1"
        android:orientation="horizontal"
        android:visibility="visible"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="222dp"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="62dp"
        android:layout_marginStart="62dp"
        android:layout_below="@+id/fakenumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/thirtysecs" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onemin" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fivemins" />
    </RadioGroup>

    <Button
        android:id="@+id/fakecalls"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="31dp"
        android:text="@string/make_call" />


</RelativeLayout>
