<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width='match_parent'
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cam.heloworld.rescuex.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerText"
            android:text="@string/Register_summary"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>


            <EditText
                android:id="@+id/reg_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/display_name"
                android:inputType="textPersonName"
                android:maxLines="1"/>


            <EditText
                android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>


            <EditText
                android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:layout_marginBottom="15dp"
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:maxLines="1"/>


            <Button
                android:id="@+id/regbtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Register" />

    </LinearLayout>
</RelativeLayout>
</ScrollView>
